--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="/projects">Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
         <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
         <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>
         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
@@ -53,7 +53,7 @@
    <section id="home" class="container text-center py-5">
     <h1>Software Developer & Data Analyst</h1>
     <p>Hi, Im Linda a passionate software developer and data analyst based in Frankfurt.<br> Want to know how I may help your projects</p>
-    <a href="#about" class="btn btn-outline-warning" target="_blank">Learn More</a>
+    <a href="#about" class="btn my-button-outline" target="_blank">Learn More</a>
    </section>
 
 
@@ -70,7 +70,7 @@
             <p class="card-text">A scalable project covering database design, SQL queries, Python and user interaction.</p>
             <p><strong>Technologies:</strong> Python, SQLite</p>
            <!-- <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a> --> 
-            <a href="https://github.com/olela28/interactive-to-do-list" class="btn btn-outline-warning"  target="_blank">View on GitHub</a> 
+            <a href="https://github.com/olela28/interactive-to-do-list" class="btn my-button-outline"  target="_blank">View on GitHub</a> 
           </div>
         </div>
       </div>
@@ -83,7 +83,7 @@
             <p class="card-text">A web application that allows users to track stock prices in real-time and manage portfolios.</p>
             <p><strong>Technologies:</strong> Python, JavaScript, SQL, HTML</p>
             <!-- <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a> --> 
-            <a href="https://github.com/olela28/flask-stock-portfolio-app-v1" class="btn btn-outline-warning"  target="_blank">View on GitHub</a> 
+            <a href="https://github.com/olela28/flask-stock-portfolio-app-v1" class="btn my-button-outline"  target="_blank">View on GitHub</a> 
           </div>
         </div>
       </div>
@@ -96,7 +96,7 @@
             <p class="card-text">A project that allowed me to focus on improving my skills in SQL and database management.</p>
             <p><strong>Technologies:</strong> SQLite</p>
             <!-- <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a> --> 
-            <a href="https://github.com/code50/130731715/blob/main/week7/fiftyville/log.sql" class="btn btn-outline-warning"  target="_blank">View on GitHub</a> 
+            <a href="https://github.com/code50/130731715/blob/main/week7/fiftyville/log.sql" class="btn bmy-button-outline"  target="_blank">View on GitHub</a> 
           </div>
         </div>
       </div>
@@ -109,7 +109,7 @@
             <p class="card-text">Automated renaming of PDF files based on an Excel file to streamline document management.</p>
             <p><strong>Technologies:</strong> Python, Excel</p>
             <!-- <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a> --> 
-            <a href="#" class="btn btn-outline-warning" target="_blank">View on GitHub</a>
+            <a href="#" class="btn my-button-outline" target="_blank">View on GitHub</a>
           </div>
         </div>
       </div>
@@ -122,7 +122,7 @@
             <p class="card-text">My personal portfolio website to showcase projects and skills.</p>
             <p><strong>Technologies:</strong> HTML, CSS, Bootstrap</p>
             <!-- <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a> --> 
-            <a href="https://github.com/olela28/olela-website" class="btn btn-outline-warning" target="_blank">View on GitHub</a>
+            <a href="https://github.com/olela28/olela-website" class="btn my-button-outline" target="_blank">View on GitHub</a>
           </div>
         </div>
       </div>
@@ -296,16 +296,10 @@
 </div>
 
   <div class="text-center mt-4">
-    <button id="load-more" class="btn btn-outline-warning" onclick="changeColor(this)">Load More</button>
+    <button id="load-more" class="btn my-button-outline">Load More</button>
   </div>
   </div>
 </section>
-<script>
-  function changeColor(element) {
-    element.classList.toggle('clicked')
-  }
-</script>
-
 
  <!-- About Section -->
  <section id="about" class="container py-5">
@@ -361,7 +355,7 @@
                   <label for="message" class="form-label">Message</label>
                   <textarea class="form-control" id="message" rows="5" placeholder="Your Message" required></textarea>
               </div>
-              <button type="submit" class="btn btn-outline-warning w-25">Send Message</button>
+              <button type="submit" class="btn my-button-outline w-35">Send Message</button>
           </form>
       </div>
   </div>
