--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <p class="card-text">A project that allowed me to focus on improving my skills in SQL and database management.</p>
             <p><strong>Technologies:</strong> SQLite</p>
             <!-- <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a> --> 
-            <a href="https://github.com/code50/130731715/blob/main/week7/fiftyville/log.sql" class="btn bmy-button-outline"  target="_blank">View on GitHub</a> 
+            <a href="https://github.com/code50/130731715/blob/main/week7/fiftyville/log.sql" class="btn my-button-outline"  target="_blank">View on GitHub</a> 
           </div>
         </div>
       </div>
