--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <p class="card-text">Automated renaming of PDF files based on an Excel file to streamline document management.</p>
             <p><strong>Technologies:</strong> Python, Excel</p>
             <!-- <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a> --> 
-            <a href="#" class="btn my-button-outline" target="_blank">View on GitHub</a>
+            <a href="https://github.com/olela28/Automation-with-Python/tree/main" class="btn my-button-outline" target="_blank">View on GitHub</a>
           </div>
         </div>
       </div>
