--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
   <!-- Home Section -->
    <section id="home" class="container text-center py-5">
+    <img src="static/pictures/oval.jpg"
     <h1>Software Developer & Data Analyst</h1>
     <p>Hi, Im Linda a passionate software developer and data analyst based in Frankfurt.<br> Want to know how I may help your projects</p>
     <a href="#about" class="btn my-button-outline" target="_blank">Learn More</a>
