--- a/index.html
+++ b/index.html
@@ -345,15 +345,15 @@
           <form action="https://formspree.io/f/mrbzwpke" method="POST" id="contactForm">
               <div class="mb-3">
                   <label for="name" class="form-label">Name</label>
-                  <input type="text" class="form-control" id="name" placeholder="Your Name" required>
+                  <input type="text" class="form-control" id="name" name="name" placeholder="Your Name" required>
               </div>
               <div class="mb-3">
                   <label for="email" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
+                  <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com" required>
               </div>
               <div class="mb-3">
                   <label for="message" class="form-label">Message</label>
-                  <textarea class="form-control" id="message" rows="5" placeholder="Your Message" required></textarea>
+                  <textarea class="form-control" id="message" rows="5" name="message" placeholder="Your Message" required></textarea>
               </div>
               <button type="submit" class="btn my-button-outline w-35">Send Message</button>
           </form>
