--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
   </div>
 </nav>
 
+  <button id="switch">Toggle Dark Mode</button>
+
+
   <!-- Home Section -->
    <section id="home" class="container text-center py-5">
     <h1>Software Developer & Data Analyst</h1>
