included script for dark mode

--- a/index.html
+++ b/index.html
@@ -491,7 +491,12 @@
   });
 </script>
 
-
+  <script>
+  const onoff = document.getElementById('switch');
+  onoff.addEventListener('click', function() {
+    document.body.classList.toggle('black');
+  });
+</script>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
  
