--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Portfolio</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -389,6 +389,15 @@
 <!-- Footer -->
 <footer class="bg-dark text-white text-center py-3">
   <p>&copy; 2024 Linda's Portfolio. All rights reserved.</p>
+  <a href="https://www.linkedin.com/in/linda-olela/" target="_blank" class="btn btn-outline-light mx-2">
+          <i class="fab fa-linkedin fa-2x"></i> LinkedIn
+      </a>
+      <a href="https://github.com/olela28" target="_blank" class="btn btn-outline-light mx-2">
+          <i class="fab fa-github fa-2x"></i> GitHub
+      </a>
+      <a href="https://medium.com/@lindaolela" target="_blank" class="btn btn-outline-light mx-2">
+        <i class="fab fa-medium fa-2x"></i> Medium
+      </a>
 </footer>
 
 <!-- Bootstrap Bundle with Popper -->
