--- a/index.html
+++ b/index.html
@@ -53,12 +53,17 @@
 
   <!-- Home Section -->
    <section id="home" class="container text-center py-5">
+     <div class="row">
+       <div class="col-md-6 mb-6">
     <h1>Software Developer & Data Analyst</h1>
     <p>Hi, Im Linda a passionate software developer and data analyst based in Frankfurt.<br> Want to know how I may help your projects</p>
     <a href="#about" class="btn my-button-outline" target="_blank">Learn More</a>
+       </div>
+       <div class="col-md-6 mb-6">
      <div class="mt-3">
-      <img src="static/pictures/CS50x.png" alt="CS50x Badge" class="img-fluid" style="height: 60px;" title="CS50x Certificate">
+      <img src="static/pictures/CS50x.png" alt="CS50x Badge" class="img-fluid" style="height: 90px;" title="CS50x Certificate">
     </div>
+       </div>
    </section>
 
 
