--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
      <h1>Software Developer & Data Analyst</h1>
      <div class="row">
        <div class="col-md-6 mb-6">
-    <p>Hi, Im Linda a passionate software developer and data analyst based in Frankfurt.<br> Want to know how I may help your projects</p>
+    <p class="justify-content-center">Hi, Im Linda a passionate software developer and data analyst based in Frankfurt. Want to know how I may help your projects</p>
     <a href="#about" class="btn my-button-outline" target="_blank">Learn More</a>
        </div>
        <div class="col-md-6 mb-6">
