--- a/index.html
+++ b/index.html
@@ -54,16 +54,17 @@
   <!-- Home Section -->
    <section id="home" class="container text-center py-5">
      <h1>Software Developer & Data Analyst</h1>
-     <div class="row">
-       <div class="col-md-6 mb-6">
-    <p class="justify-content-center" padding-left: 25px>Hi, Im Linda a passionate software developer and data analyst based in Frankfurt. If you are looking to streamline your workflows and want to know how I may help your projects, click on the button below to find out more.</p>
+     <div class="row align-items-center">
+       <div class="col-md-6 mb-4">
+    <p class="text-center">Hi, Im Linda a passionate software developer and data analyst based in Frankfurt. If you are looking to streamline your workflows and want to know how I may help your projects, click on the button below to find out more.</p>
     <a href="#about" class="btn my-button-outline" target="_blank">Learn More</a>
        </div>
-       <div class="col-md-6 mb-6">
-     <div class="mt-3">
+       <div class="col-md-6 mb-4">
+     <div class="d-flex justify-content-center">
       <img src="static/pictures/CS50x.png" alt="CS50x Badge" class="img-fluid" style="height: 120px;" title="CS50x Certificate">
     </div>
-       </div>
+  </div>
+  </div>
    </section>
 
 
