--- a/index.html
+++ b/index.html
@@ -118,12 +118,25 @@
           <div class="card-body">
             <h5 class="card-title">PDF Renaming Automation</h5>
             <p class="card-text">Automated renaming of PDF files based on an Excel file to streamline document management.</p>
-            <p><strong>Technologies:</strong> Python, Excel</p>
+      <!-- PDF Measurement Script -->
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <img src="static/pictures/hole.jpg" class="card-img-top" alt="Flask Web App">
+          <div class="card-body">
+            <h5 class="card-title">Python Script for Bulk Update</h5>
+            <p class="card-text">Automated process of adding product measurements to PDF files based on the product name found in the filenames.</p>
+            <p><strong>Technologies:</strong> Python, VS Code</p>
+            <!-- <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a> --> 
+            <a href="https://github.com/olela28/Automation-with-Python/tree/main" class="btn my-button-outline" target="_blank">View on GitHub</a>
+          </div>
+        </div>
+      </div><strong>Technologies:</strong> Python, Excel</p>
             <!-- <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a> --> 
             <a href="https://github.com/olela28/Automation-with-Python/tree/main" class="btn my-button-outline" target="_blank">View on GitHub</a>
           </div>
         </div>
       </div>
+      
       <!-- Portfolio Website -->
       <div class="col-md-4 mb-4">
         <div class="card">
