added a new project

--- a/index.html
+++ b/index.html
@@ -133,7 +133,21 @@
             <p class="card-text">Automated process of adding product measurements to PDF files based on the product name found in the filenames.</p>
             <p><strong>Technologies:</strong> Python, VS Code</p>
             <!-- <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a> --> 
-            <a href="https://github.com/olela28/Automation-with-Python/tree/main" class="btn my-button-outline" target="_blank">View on GitHub</a>
+            <a href="https://github.com/olela28/pdf-measurements-script" class="btn my-button-outline" target="_blank">View on GitHub</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Search Summary Chrome Extension -->
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <img src="static/pictures/motherboard.jpg" class="card-img-top" alt="Flask Web App">
+          <div class="card-body">
+            <h5 class="card-title">Search Summary Chrome Extension</h5>
+            <p class="card-text">A chrome extension that tracks and summarizes your google search activity categorizing it by date for easy review.</p>
+            <p><strong>Technologies:</strong> JavaScript, HTML</p>
+            <!-- <a href="/projects" class="btn btn-outline-warning" target="_blank">Learn More</a> --> 
+            <a href="https://github.com/olela28/search-summary-extension" class="btn my-button-outline" target="_blank">View on GitHub</a>
           </div>
         </div>
       </div>
