--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <!-- Search Summary Chrome Extension -->
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="static/pictures/motherboard.jpg" class="card-img-top" alt="Flask Web App">
+          <img src="static/pictures/search.jpg" class="card-img-top" alt="Flask Web App">
           <div class="card-body">
             <h5 class="card-title">Search Summary Chrome Extension</h5>
             <p class="card-text">A chrome extension that tracks and summarizes your google search activity categorizing it by date for easy review.</p>
