changed introduction in the home section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
      <h1>Software Developer & Data Analyst</h1>
      <div class="row align-items-center">
        <div class="col-md-6 mb-4">
-    <p class="text-center">Hi, Im Linda a passionate software developer and data analyst based in Frankfurt. If you are looking to streamline your workflows and want to know how I may help your projects, click on the button below to find out more.</p>
+    <p class="text-center">Hi, Im Linda a passionate software developer and data analyst based in Frankfurt. If you are looking to bring efficiency and innovation to your projects, you're in the right place. With a strong foundation in full-stack development and data analysis, I can help optimize your workflows, implement innovative solutions and help you stay ahead of the curve in a competitive digital landscape.</p>
     <a href="#about" class="btn my-button-outline" target="_blank">Learn More</a>
        </div>
        <div class="col-md-6 mb-4">
